fixed issue with labels not showing up on selecting image

--- a/label_coach/web_client/src/styles/ImageContainer.css
+++ b/label_coach/web_client/src/styles/ImageContainer.css
@@ -1,4 +1,5 @@
 .image-container{
     background: #c5c5c5;
     flex-grow: 2;
+    overflow-y: auto;
 }
