--- a/label_coach/web_client/src/styles/LabelTasker.css
+++ b/label_coach/web_client/src/styles/LabelTasker.css
@@ -49,6 +49,7 @@
 
 body.background{
     background-color: #E7E8E8 !important;
+    overflow: hidden!important;
 }
 
 /* fixing issues with modal in girder*/
