--- a/label_coach/web_client/src/styles/SideBar.css
+++ b/label_coach/web_client/src/styles/SideBar.css
@@ -1,6 +1,6 @@
 .sidebar {
     z-index: 1040;
-    height: 100%;
+    height: 93%;
     display: flex;
     flex-direction: column;
     position: relative;
